# my-python-projects

Desktop/projects/matplotlib-practice/: README.md  bar_plot_exercises.py  histogram_exercises.py  main.py  pie_chart_exercises.py  plot_exercises.py  scatter_plot_exercises.py  subplot_exercises.py
Desktop/projects/pandas-practice/: .gitignore  DIAGNOSTIC_GUIDE.md  HOW_TO_RUN_TESTS.md  QUICK_START_TESTING.md  README.md  TEST_INSTRUCTIONS.md  comprehensive_test.py  create_datasets.py  main.py  test_all_120_cases.py  test_all_correct_answers.py  test_all_tasks.py  test_all_tasks_comprehensive.py  test_correct_answers_all_datasets.py  test_every_task.py  test_simulation.py  test_verify_all_correct_answers.py  test_verify_correct_answers.py
Desktop/projects/pandas-practice-lite/: README.md  TASK_TESTING_SUMMARY.md  TEST_120_CASES_SUMMARY.md  TEST_FILES_EXPLANATION.md  TEST_FILES_STATUS.md  comprehensive_test.py  create_datasets.py  main.py  remaining_problems.txt  test_all_120_cases.py  test_all_correct_answers.py  test_all_tasks.py  test_all_tasks_comprehensive.py  test_correct_answers_all_datasets.py  test_every_task.py  test_simulation.py  test_verify_all_correct_answers.py  test_verify_correct_answers.py  verify_all_tasks.py
Desktop/projects/python-starter/: .gitignore  README.md  exercises.py  exercises_solutions.py  input_exercises.py  learning_roadmap.md  pyproject.toml  trivia_game_requirements.md
Desktop/projects/python-starter/src/python_starter/: __main__.py  main.py
Desktop/projects/python-starter/tests/: test_sanity.py
(+54 files in other folders)
